--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Game Modules (Order matters for dependencies) -->
   <script src="js/config.js"></script>
   <script src="js/riddles.js"></script>
+  <script src="js/instructions.js"></script>
   <script src="js/game-state.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/input.js"></script>
