--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="js/riddles.js"></script>
   <script src="js/instructions.js"></script>
   <script src="js/game-state.js"></script>
+  <script src="js/leaderboard.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/input.js"></script>
   <script src="js/assets.js"></script>
